  methods.
- In the windows.Window class: we have removed the num_cols and num_rows
  properties, the __getitem__ method, and the from_offlen and from_ranges class
  methods.

Upcoming deprecation:

- Reading array data or masks from datasets opened in "w" mode will be
  prohibited in Rasterio 1.0. We are warning about this now (#1309).
- All set_* methods of datasets will be deprecated in 1.0. The appropriate
  properties should be used instead. For example,
  ``dataset.crs = "EPSG:4326"`` instead of ``dataset.set_crs("EPSG:4326")``.

New features:

- A tools module has been added to collect file-based functions and supporting
  classes (#1300).
- ``rasterio.features.dataset_features()`` has been extracted from
  rio-shapes (#1282, #1286).

Bug fixes:

- Rasterio functions and methods, even the private ones, now always take
  instances of Affine as transform parameters (#796).
- Importing the features, fill, io, and warp modules would set the
  CHECK_WITH_INVERT_PROJ=True and GTIFF_IMPLICIT_JPEG_OVR=False config options
  in a hidden way. This has been fixed in #1340.
- Add Debian data directory to set of well-known paths to search (#1337).
- Pass precision parameter from ``merge`` to ``from_bounds`` (#1307).
- Added the missing w+ mode (#1309).
- Rotated datasets are now masked properly (#1240, #1278).
- Geometry collections are flattened in ``rasterize`` to work around
  incidental holes created by GDAL (#1253, #1274).
- Add missing support for Python geo protocol in features module (#1268,
  (#1269).
- ``mask()`` now takes the ``indexes`` keyword parameter that is common
  elsewhere in the package (#1224, #1225).
- Sharing of dataset handles may be disabled for multithreaded applications
  using the new `sharing` keyword argument of `rasterio.open` (#1260).
- ``WarpedVRT()`` properly sets a CRS on the internal VRT handle when
  that VRT is produced by ``GDALCreateVRT()`` (#1283).

1.0a12 (2017-12-01)
-------------------

New features:
