@@ -9,11 +9,11 @@ def test_set_units(tmpdir):
     """Units can be set when dataset is open"""
     tmptiff = str(tmpdir.join('test.tif'))
     with rasterio.open(
-            tmptiff, 'w', count=2, height=256, width=256,
+            tmptiff, 'w', count=3, height=256, width=256,
             **default_gtiff_profile) as dst:
-        assert dst.units == (None, None)
-        dst.units = ['meters', 'degC']
-        assert dst.units == ('meters', 'degC')
+        assert dst.units == (None, None, None)
+        dst.units = ['meters', 'degC', None]
+        assert dst.units == ('meters', 'degC', None)
 
 
 @pytest.mark.parametrize('value', [['m'], ['m', 'ft', 'sec'], []])
